# VitaEngine

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.ZhtfwR
debugBuild/: CMakeCache.txt  Makefile  VitaEngine.cbp  afos2  cmake_install.cmake
debugBuild/.cmake/api/v1/reply/: cache-v2-a8d565c914674cd283a7.json  cmakeFiles-v1-85d531a94a034716f87b.json  codemodel-v2-6b993bafe0350db5aa78.json  index-2020-01-18T00-45-21-0120.json  target-VitaEngine-Debug-3988bda4b84b2e736898.json  target-afos2-Debug-5001db05b596debc7d7d.json  target-rend-Debug-9cc823a879eb339ecf94.json
shared/demo/shaders/: Tex.txt  gui.txt
shared/include/rend/: Context.cpp  Shader.cpp  Shader.h
shared/shaders/: Tex.txt
src/engine/: Audio.cpp  Audio.h  BoundingBox.cpp  BoundingBox.h  BoxCollider.cpp  BoxCollider.h  Camera.cpp  Camera.h  Camera.h.autosave  Component.cpp  Component.cpp.autosave  Component.h  Core.cpp  Core.h  Entity.cpp  Entity.cpp.autosave  Entity.h  Environment.cpp  Environment.h  Exception.cpp  Exception.h  GUI.cpp  GUI.h  Input.cpp  Input.h  Keyboard.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  MeshRenderer.cpp  MeshRenderer.cpp.autosave  MeshRenderer.h  Resource.cpp  Resource.h  Resources.cpp  Resources.h  Resources.h.autosave  Screen.cpp  Screen.h  (+15 more)
src/game/: Player.cpp  Player.h  main.cpp  main.cpp.autosave
